--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 !/.breathecode
 /.breathecode/**
 !/.breathecode/exercises
+!/.breathecode/exercises/.?bc.json
 !/.breathecode/exercises/**
 !/.breathecode/assets
 !/.breathecode/assets/**
